--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+
+# Ignore all lock files
+*.lock
 
 # Editor directories and files
 .vscode/*
